Add new pom model

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\suren\AppData\Local\Temp\testng-eclipse-75297928\testng-customsuite.xml</span>
+                    <span>C:\Users\Lilit\AppData\Local\Temp\testng-eclipse--221365589\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\suren\AppData\Local\Temp\testng-eclipse-75297928\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Lilit\AppData\Local\Temp\testng-eclipse--221365589\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,12 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestCases.Base&quot;/&gt;
-      &lt;class name=&quot;pageObjects.mainPage&quot;/&gt;
       &lt;class name=&quot;TestCases.WendellAddHero&quot;/&gt;
-      &lt;class name=&quot;TestCases.autoFramework.base&quot;/&gt;
-      &lt;class name=&quot;TestCases.autoFramework.main&quot;/&gt;
-      &lt;class name=&quot;pageObjects.WendellLandingPage&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -163,7 +158,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (6 classes)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -193,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'open_page')
 data.setCell(0, 2, 'TestCases.WendellAddHero')
-data.setCell(0, 3, 163);
+data.setCell(0, 3, 912);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 163 ms</span>
+              <span class="suite-total-time">Total running time: 912 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,18 +208,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">TestCases.WendellAddHero</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">DriverInit</span>
-                <br/>
-                <span class="ignored-method-name">GetParameters</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -233,21 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestCases.Base</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestCases.WendellAddHero</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">GetParameters</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">DriverInit</span>
-                <span class="method-start">13 ms</span>
+                <span class="method-start">19 ms</span>
               </div> <!-- configuration-test before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">TestCases.WendellAddHero</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">open_page</span>
-                <span class="method-start">10862 ms</span>
+                <span class="method-start">5884 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
