--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61f5df">  <td>20/01/22 00:09:33</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Base.DriverInit()[pri:0, instance:TestCases.Base@59fa1d9b]">&gt;&gt;DriverInit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="61f5df">  <td>20/01/22 00:09:33</td>   <td>-9</td> <td title="&gt;&gt;Base.GetParameters()[pri:0, instance:TestCases.Base@59fa1d9b]">&gt;&gt;GetParameters</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="7be3c5">  <td>20/01/22 00:09:44</td>   <td>10848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WendellAddHero.open_page()[pri:0, instance:TestCases.WendellAddHero@28d25987]">open_page</td> 
-  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="b66870">  <td>20/01/22 13:36:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Base.DriverInit()[pri:0, instance:TestCases.WendellAddHero@cb5822]">&gt;&gt;DriverInit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="b66870">  <td>20/01/22 13:36:24</td>   <td>-9</td> <td title="&gt;&gt;Base.GetParameters()[pri:0, instance:TestCases.WendellAddHero@cb5822]">&gt;&gt;GetParameters</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>20/01/22 13:36:30</td>   <td>5865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WendellAddHero.open_page()[pri:0, instance:TestCases.WendellAddHero@cb5822]">open_page</td> 
+  <td>main@1476394199</td>   <td></td> </tr>
 </table>
