--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Lilit\AppData\Local\Temp\testng-eclipse--221365589\testng-customsuite.xml</span>
+                    <span>C:\Users\suren\AppData\Local\Temp\testng-eclipse--210442118\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestCases.WendellAddHero" hash-for-method="open_page">open_page</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestCases.RestTest" hash-for-method="post_test">post_test</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestCases.RestTest" hash-for-method="simple_get_test">simple_get_test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +125,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TestCases.WendellAddHero</span>
+              <span class="class-name">TestCases.RestTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="open_page">
-                  </a> <!-- open_page -->
-                  <span class="method-name">open_page</span>
+                  <a name="post_test">
+                  </a> <!-- post_test -->
+                  <span class="method-name">post_test</span>
+                  <em>
+(Send Post to add Lisa/2000)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="simple_get_test">
+                  </a> <!-- simple_get_test -->
+                  <span class="method-name">simple_get_test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Lilit\AppData\Local\Temp\testng-eclipse--221365589\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\suren\AppData\Local\Temp\testng-eclipse--210442118\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +158,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestCases.WendellAddHero&quot;/&gt;
+      &lt;class name=&quot;TestCases.RestTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'open_page')
-data.setCell(0, 2, 'TestCases.WendellAddHero')
-data.setCell(0, 3, 912);
+data.setCell(0, 1, 'post_test')
+data.setCell(0, 2, 'TestCases.RestTest')
+data.setCell(0, 3, 4196);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'simple_get_test')
+data.setCell(1, 2, 'TestCases.RestTest')
+data.setCell(1, 3, 166);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 912 ms</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,19 +237,27 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestCases.WendellAddHero</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestCases.RestTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">GetParameters</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">DriverInit</span>
-                <span class="method-start">19 ms</span>
+                <span class="method-start">31 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">open_page</span>
-                <span class="method-start">5884 ms</span>
+                <span class="method-name">post_test</span>
+                <span class="method-start">12048 ms</span>
               </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">simple_get_test</span>
+                <span class="method-start">16249 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-suite after">
+                <span class="method-name">TeardownTest</span>
+                <span class="method-start">16512 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
